# VIP

./: .dockerignore  .gitignore  Dockerfile  README.md  onStart.sh  pyproject.toml  ray_try_nb.ipynb  requirements.txt  run_dev.sh  run_prod.sh  setup.ipynb  stop_dev.sh  utilities.py
.k8s/base/: deployment-redis.yaml  deployment-server.yaml  kustomization.yaml  service-server.yaml
data/: ReadME.md  djn100_tickers.txt  sp500_ids.txt
jenna/: clean_compustat_data.py  clean_crsp_data.py  crsp_2018-2023_eda.ipynb
ray/: Baseline-pypfopt.ipynb  Baseline-scipy.ipynb  Baseline.ipynb  ray_try_nb.ipynb  spark_trial.ipynb
src/: README.md  run_dev.sh  setup.ipynb
src/jenna/: README.md  clean_compustat_data.py  clean_crsp_and_comp.ipynb  clean_crsp_data.py  crsp_2018-2023_eda.ipynb  wrds_data_pull.py  wrds_datadownload.ipynb
src/rachel/: clean_crsp_compustat.ipynb  clean_crsp_stage1.ipynb  clean_crsp_stage1_w_visual.ipynb  clean_crsp_stage2.ipynb  clean_crsp_stage3.ipynb  crsp_select_10_stocks.ipynb  file_utilities.py
src/ray/: Baseline-Pypfopt.ipynb  Baseline-pypfopt.ipynb  Baseline.ipynb  Embedding-Generator.ipynb  Embedding-memory-saver.ipynb  Embedding-memory-saverV2.ipynb  Embeddings-Compustat.ipynb  PypfoptBaseline.ipynb  index_filter.ipynb  pyproject.toml  test_data.ipynb
src/ray/archive/: Baseline-Pypfopt.ipynb
src/ray/optimizer/: backtest.py  portfolios.py  strategies.py
src/ray/utils/: file_utilities.py  pytorch_benchmark.ipynb
src/server/: data_factory.py  data_model.py  main.py  main_crontab.py
src/shuo/: Compare_Matrix.ipynb  Embedding-All_Stocks_Step_1.ipynb  Embedding-All_Stocks_Step_1_new_dataframe.ipynb  Embedding-S&P_Phase_1.ipynb  Embedding-S&P_Phase_2.ipynb  Embedding-S&P_Phase_3.ipynb  Embedding-S&P_Step_1-Copy1.ipynb  Embedding-S&P_Step_1.ipynb  Embedding-S&P_Step_1_4_dimension_2_embedding-No_Standardize.ipynb  Embedding-S&P_Step_1_4_dimension_2_embedding-batchsize128-50epochs-overfitting-high_learning_rate.ipynb  Embedding-S&P_Step_1_4_dimension_2_embedding-batchsize128-50epochs-overfitting.ipynb  Embedding-S&P_Step_1_one_Model.ipynb  (+34 more)
(+55 files in other folders)
