[tool.poetry]
name = "src"
version = "0.1.0"
description = "poetry toml for the web hosting"
authors = ["Ray Cao <caopuzheng@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.13.1"
yfinance = "^0.2.40"
pyarrow = "^16.1.0"
# for web hosting
requests = "^2.31"
fastapi-cache2 = { extras = ["redis"], version = "^0.1.9" }
fastapi = "^0.104.1"
uvicorn = "^0.24"
joblib = "^1.4.2"
 # for s3, only accessible locally
boto3 = "^1.34.131"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pytest = "^7.4.2"
httpx = "^0.24.1"
ruff = "^0.0.287"
black = { extras = ["jupyter"], version = "^24.4.2" }
pre-commit = "^3.4.0"
isort = "^5.13.2"
# for plotting
plotly = "^5.22.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
