[tool.poetry]
name = "ray"
version = "0.1.0"
description = "poetry inital toml for the project"
authors = ["Ray Cao <caopuzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# to be in sync with sagemaker, with GPU support for training
torch = { version = "^2.3.0+cu121", source = "pytorch-gpu-src" }
torchvision = { version = "^0.18.0+cu121", source = "pytorch-gpu-src" }
torchaudio = { version = "^2.3.0+cu121", source = "pytorch-gpu-src" }
scipy = "^1.13.1"
yfinance = "^0.2.40"
pyportfolioopt = "^1.5.5"
plotly = "^5.22.0"
seaborn = "^0.13.2"
boto3 = "^1.34.131"
matplotlib = "^3.9.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.24.1"
ruff = "^0.0.287"
black = { extras = ["jupyter"], version = "^24.4.2" }
pre-commit = "^3.4.0"
isort = "^5.13.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
